--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "@digital-boss/n8n-nodes-supportpal",
 	"version": "1.2.3",
 	"author": "Iñaki Breinbauer",
-	"license": "GPL-3.0",
+	"license": "MIT",
 	"description": "Supportpal support for n8n",
 	"keywords": [
 		"n8n",
